gcc/testsuite/gcc.dg/noncompile/921116-1.c
/* { dg-require-effective-target gcc_frontend } */
void a (void x) {}	/* { dg-error "has incomplete type" } */
